# voice_recognition_system_2

vint_ros/: CMakeLists.txt  package.xml
vint_ros/launch/: vint_voice.launch.py
vint_ros/others/: YOLO11_labels.yaml  YOLO_objects.yaml  bts.yaml  prompts.yaml
vint_ros/vint_ros/: Task_Manager_node.py  phase1_trig_vint.py  vosk_node.py
